# opaque

./: .gitignore  .project  .pydevproject
ciba/: build_images.sh
ciba/dependencies/: pca_module-1.1.02.rar
ciba/docker/: Dockerfile  build_images.sh  dockerInstall.sh  installStuff.sh  ois-1.3.0-7.fc22.x86_64.rpm  ois-devel-1.3.0-7.fc22.x86_64.rpm  setupRepo.sh
ciba/scripts/: centos6-ks.cfg  ctbs-base-ovf.ovf  installStuff.sh  kvm.json
doc/: algorithm.txt
doc/Dissertation/: 2-motion.tex  3-estimation.tex  5_inplace_ICP.tdimg  5_pose_graph_backtrack.tdimg  5_pose_graph_paired.tdimg  6-loops.tex  DegenerateCurve.psd  Everist-Thesis.aux  Everist-Thesis.loa  Everist-Thesis.lof  Everist-Thesis.tex  Everist-Thesis.toc  ProbeSegsWidth.nb  USC-Thesis.cls  pose_graph_paired.tdimg  rectv2-red.eps
doc/phdPics/: 2_adaptive_1.xcf  2_adaptive_2.xcf  2_adaptive_3.xcf  2_adaptive_4.xcf  2_frontanchor_1.xcf  2_problem_1.xcf  3_2_draft.xcf  3_frames_1.xcf  3_frames_2.xcf  3_pose_frame2.psd  4_alpha_freespace.xcf  4_alpha_freespace2.xcf  4_alpha_radius.xcf  4_bowtie_detect.xcf  4_convex_freespace1.xcf  4_convex_freespace2.xcf  4_medial_process.xcf  4_medial_process2.xcf  4_pokewalls_1.xcf  4_ref_averaging.xcf  4_snapshot_1.xcf  4_sweepmap_1.xcf
doc/scrivener_draft/: MMDTemplate.txt  dissertation.bib
src/: BuiltMap.py  DrawThings.py  RefNode.cpp  StartNXSimulation.py  StartQuick.py  StartSimulation.py  StartTest.py  ValueStability.h  anchorPose.txt  batchTests.py  compileResults4.py  compileResults5.py  cornerDetection.py  cv.pyd  fastserver.py  genMaps.py  icp.pyx  loadObject.py  nxsnakeprobe.pyd  ogre.cfg  plotJoints.py  plugins.cfg  resources.cfg  runTests.py  servo.pyx  setup.py  sf_OIS.py  solver.py  stability.pyx  startQuick.py  startSim.py  startSim2.py  startTest.py  stitchImages.py  stitchScenes.py  testBranch.py  testDijkstra.py  testLandmark.py  toro.py  transform.pyx  (+2 more)
src/BulletTestApp/: BulletDynamics.lib  BulletTestApp.cpp  LinearMath.lib  bulletsnakeprobe.cpp  bulletsnakeprobe.pyd  bulletsnakeprobe.pyx  setup.py  stdafx.cpp
src/Python-2.6.8/: .hg_archival.txt
src/alpha2/: ALL_BUILD.sln  ALL_BUILD.vcproj  Alpha_shapes_2_example.sln  CMakeCache.txt  CMakeLists.demo.txt  CMakeLists.old.txt  CMakeLists.old2.txt  CMakeLists.txt  CMakeLists.txt.bak  ZERO_CHECK.vcproj  alpha2.cpp  alpha2.sln  alpha2.vcproj  alphamod.cpp  alphamod.pyd  cgal_types.h  cmake_install.cmake  ex_alpha_shapes_2.sln  ex_alpha_shapes_2.vcproj  ex_weighted_alpha_shapes_2.vcproj  poly_union.cpp  poly_union.vcproj  setup.py
src/alpha2/Debug/: alpha2.idb  alpha2.ilk
src/alpha2/alpha2.dir/Debug/: BuildLog.htm  mt.dep
src/analysis/: compileResults.py  compileResults2.py  compileResults3.py  compileResults4.py  diffAnalysis.py  plotAngles.py  plotMove.py  plotProbeResponse.py  stitchImages2.py  stitchImages3.py  varAnalysis.py
src/concepts/: ProbeExtension.nb  ProbeSegsWidth.nb  ProbeWidth.nb  bayes.py  scsgp.py  testEM.py  testStateEstimation.py  test_pulp.py
src/mapLibrary/: 60_left_junction.py  60_left_right_junction.py  60_right_junction.py  60_right_left_junction.py  L_89_left_junction.py  L_89_right_junction.py  L_left_junction.py  L_left_right_junction.py  L_right_junction.py  L_right_left_junction.py  T_89_junction.py  T_bottom_T_junction.py  T_bottom_junction.py  T_side_T_junction.py  T_side_junction.py  Y_Y_junction.py  Y_junction.py  Y_left_Y_junction.py  Y_right_Y_junction.py  cross_cross_junction.py  cross_junction.py  gen_junction.py  gen_junction2.py
src/media/: Cube.mesh  Cube.mesh.xml  Thumbs.db  plane.material  wall.material
src/medial/: CMakeLists.txt  functions.py  medialaxis.pyx  setup.py  skeletonizeCV.c  skeletonizeCV.cpp  skeletonizeCV.h  testMedial.py
src/modules/: RefNode.h  ValueStability.cpp  func.c  func.pyx  match.c  reference.cpp  reference.pyx  servo.c  servo.pyx  setup.py  stability.cpp  transform.c
src/motion/: SplineFit.py  coord.py  correctPose.py  functions.py  genICP_working.py  gen_icp.py  processData.py  testICP.py
src/multiProc/: '  Client.py  Controller.py  Pose.py  blockClient.py  fastserver.py  gen_icp.py  icp.pyd  icp.pyx  solver.py  transformData.py
src/nelmin/: build.bat  cudaData3.txt  nelmin.h  nelminICP.c  nelminICP.pyx  runHostNel.c  runNelmin.cu  runNelmin.h  setup.py  testCyCuda.py
src/opaque/: CmdDrawThings.py  ControlError.py  DrawThings.py  SnakeControl.py  TestAdaptiveStep.py  TestAnchor.py  TestAnchorTransition.py  TestBehavior.py  TestFrontExtend.py  TestHoldPosition.py  TestHoldSlideTransition.py  TestHoldTransition.py  TestMapGraph.py  TestMapping.py  TestModular.py  TestNavigation.py  TestNavigation2.py  TestPathAnchor.py  TestPathStep.py  TestPokeWalls.py  TestProcess.py  TestTransform.py  TestUnit.py
src/physx/: Lesson101.cpp  Lesson101.h  Lesson101.vcproj  NxSnake.cpp  NxSnake.h  Stream.cpp  nxsnakeprobe.cpp  nxsnakeprobe.pyx  setup.py  test_nx.py
src/tests/: testCurve.py  (+3 more)
(+9755 files in other folders)
